--- a/.travis.yml
+++ b/.travis.yml
@@ -15,14 +15,16 @@ branches:
   only:
   - master
   - dev
+  - QA_testing
 
 # Install additional software
 addons:
   # Install dependencies for generating API documentation with doxygen
   apt:
     packages:
-      - doxygen
-      - doxygen-latex
+      # default doxygen 1.7 is too old, we install our own
+      #- doxygen
+      #- doxygen-latex
       - graphviz
       - ttf-liberation
 
@@ -77,6 +79,7 @@ matrix:
 cache:
   directories:
     - $HOME/.composer/cache
+    - $HOME/doxygen/doxygen-$DOXY_VER/bin
 
 
 
