--- a/composer.json
+++ b/composer.json
@@ -33,11 +33,12 @@
 		"pixel418/markdownify": "^2.2"
 	},
 	"require-dev" : {
-		"php" : ">=5.6",
-		"phpunit/phpunit" : "^5.7",
+		"php" : ">=7.0",
+		"phpunit/phpunit" : "^6.0",
 		"behat/behat" : "@stable",
 		"behat/mink-extension": "@stable",
-		"behat/mink-goutte-driver": "@stable"
+		"behat/mink-goutte-driver": "@stable",
+		"php-mock/php-mock-phpunit": "^2.0"
 	},
 	"autoload" : {
 		"psr-4" : {
