--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,8 @@ branches:
   - master
   - dev
   - QA_testing
+  # whitelist our tags for release deployments e.g. 2.2
+  - /^\d+\.\d+(\.\d+)?(-\S*)?$/
 
 # Install additional software
 addons:
@@ -46,7 +48,6 @@ env:
   global:
     # used for doxygen deployment script
     - DOXYFILE: $TRAVIS_BUILD_DIR/util/Doxyfile
-    - GHP_REPO_REF: github.com/redmatrix/hubzilla.git
     # Uncomment if a newer/specific version of Doxygen should be used
     #- DOXY_VER: 1.8.12
     # Code Coverage is slow, no need to have it in every build
@@ -124,15 +125,29 @@ after_success:
   - ./tests/travis/gen_apidocs.sh
 #after_failure:
 
-# Deploying a release to GitHub when tagging in master
-# Waiting for upcoming 'Build Stages' Q1/Q2 2017 to make generation of API docs
-# and release packages cleaner. https://github.com/travis-ci/travis-ci/issues/929
+# Deploying release and API documentation to GitHub
 #before_deploy:
-#deploy:
-#  skip_cleaning: true
-#  provider: releases
-#  on:
-#    tags: true
+deploy:
+  - provider: pages
+    skip_cleanup: true
+    local_dir: $TRAVIS_BUILD_DIR/doc/html
+    github_token: $GHP_TOKEN
+    on:
+      branch: QA_testing
+      repo: dawnbreak/hubzilla
+      #repo: redmatrix/hubzilla
+      #branch: master
+      condition: '(-n "$GHP_TOKEN") && ("$TRAVIS_JOB_NUMBER" == "${TRAVIS_BUILD_NUMBER}.1")'
+  # add API documentation to release, could also be used to provide full packages if we want to drop vendor from our repo
+  - provider: releases
+    skip_cleanup: true
+    api_key: $GHP_TOKEN
+    file: 'doc/hubzilla-api-documentation.zip'
+    on:
+      repo: dawnbreak/hubzilla
+      #repo: redmatrix/hubzilla
+      tags: true
+      condition: '(-n "$GHP_TOKEN") && ("$TRAVIS_JOB_NUMBER" == "${TRAVIS_BUILD_NUMBER}.1")'
 #after_deploy:
 
 #after_script:
